Bug 301466 - "Configure Kontact as Groupware Client" link broken
Summary: "Configure Kontact as Groupware Client" link broken
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: general (other bugs)
Version First Reported In: GIT (master)
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-08 18:18 UTC by Christian Mollekopf
Modified: 2012-07-03 09:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian Mollekopf 2012-06-08 18:18:09 UTC
The "Configure Kontact as Groupware Client" link, which is accessible by opening Kontact and then "Help" -> "Kontact Introduction", erroneously points to "exec:/gwwizard" which is AFAIK no longer existing and should rather point to "exec:/accountwizard" (although that is not only a groupwarewizard, so maybe make it a "Configure Kontact" link).



Reproducible: Always
Comment 1 Laurent Montel 2012-07-03 09:08:19 UTC
Git commit 1861d54fe1f0c1efeb3921ac9b1d2427edba55b9 by Montel Laurent.
Committed on 03/07/2012 at 11:07.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix Bug 301466 - "Configure Kontact as Groupware Client" link broken

FIXED-IN: 4.9

M  +8    -7    kontact/src/mainwindow.cpp

http://commits.kde.org/kdepim/1861d54fe1f0c1efeb3921ac9b1d2427edba55b9