Fix Bug 301466 - "Configure Kontact as Groupware Client" link broken

FIXED-IN: 4.9
BUG: 301466